# simple-awg-api

./: .env  .gitignore  Cargo.toml
data/templates/: config.hbs  index.hbs
src/: main.rs
src/api/: mod.rs
src/interactions/: cfg.rs  client_table.rs  get.rs  mod.rs  pages.rs  shared.rs  wg0.rs
src/util/: env.rs  middleware.rs  mod.rs
