[package]
name = "simple-awg-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
handlebars = "6.3.2"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["v4"] }
